@@ -1,4 +1,0 @@
-"""Factories for the dynamic_content app."""
-# import factory
-
-# from .. import models
