@@ -1,10 +1,6 @@
-django-nose
 coverage
 django-coverage
 ipdb
 flake8
 fabric
-factory_boy
 mock
-selenium
-south
